fix the clone problem, finished mutation operator